--- a/Ficher_Principal.css
+++ b/Ficher_Principal.css
@@ -26,7 +26,7 @@ font-size : 30pt;
 
 body
 {
-  background-color: #91AA9D;
+  background-color: #7a7a6d;
 }   
 
 #probleme {
@@ -45,7 +45,7 @@ margin-right: auto;
 
 #titre {
 font-size : 75px;
-color : #193441;
+color : #1D2326;
 font-family : calibri;
 border-width : 5px;
 border-color : grey;
@@ -59,7 +59,7 @@ margin-right:auto;
 
 #Etape {
 font-size : 40px;
-color : #193441;  
+color : #1D2326;  
 font-family : calibri;
 margin-top : 10px;
 margin-left:10px;
@@ -69,7 +69,29 @@ text-align : center;
 #Upload {
 text-align : center;
 margin-top : 10px;
-color : #193441;  
+color : #1D2326;  
+}
+
+#Upload_c{
+position:absolute;
+margin-top : 10px;
+margin-left : 30%;
+color : #1D2326;  
+
+}
+#Upload1{
+position:absolute;
+margin-top : 10px;
+margin-left : 70%;
+color : #1D2326;  
+}
+
+#image_upload{
+margin-top:50px;
+display:flex;
+margin-left:auto;
+margin-right:auto;
+min-height:100%;
 }
 
 #monCanvas{
@@ -77,7 +99,24 @@ margin-top:20px;
 margin-left: auto;
 margin-right: auto;
 border:5px  black;
+width:30%;
+height:40%;
 } 
+
+#monCanvas_c{
+border:5px  black;
+overflow: auto;
+float:left;
+} 
+
+#monCanvas1{
+border:5px  black;
+flex: 1;
+overflow: auto;
+float:left;
+}
+
+
 
 .corp_page_explication {
 font-weight:bold;
@@ -85,9 +124,10 @@ font-size:20pt;
 font-family:Calibri;    
 }
 .Suivante {
-background: #D1DBBD;
+width:200px;
+background: #958976;
 border-radius: 10px;
-color: #193441;
+color: #1D2326;
 font: 100% Georgia, "Caslibri", Times, serif;
 letter-spacing: 1px;
 margin-top :5px;
@@ -101,7 +141,7 @@ margin-right: auto;
 }
 
 h1{
-font-size:27pt; 
+font-size:2vw; 
 font-family:Calibri;  
 }
 
@@ -109,19 +149,19 @@ h2{
 font-family:Calibri;
 margin-left:10px;
 margin-top: 100px;
-color: #193441;
+color: #1D2326;
 font-size:23pt; 
 }
 
 p{
 font-family:Calibri;
 margin-left:10px;
-color: #193441;
+color: #1D2326;
 font-size:23pt; 
 }
 
 #cryptage{
-background-color: #193441;
+background-color: #FFFFFF;
 font-family:Calibri; 
 font-size:20pt;
 width : 39%;
@@ -135,7 +175,7 @@ margin-top:4%;
 }
 
 #decryptage{
-background-color: #193441;
+background-color: #FFFFFF;
 font-family:Calibri; 
 font-size:20pt;
 width : 39%;
@@ -167,7 +207,7 @@ cursor: pointer;
 .explication {
 background-color: white;
 font-family:Calibri; 
-font-size:30pt;
+font-size:25pt;
 width : 95%;
 height : 90%;
 border: 5px groove black ;
@@ -178,9 +218,9 @@ margin-right:auto;
 .premiere_page{
 background-color: white;
 font-family:Calibri; 
-font-size:30pt;
-width : 700px;
-height : 750px;
+font-size:2vw;
+width : 35%;
+height : 80%;
 border: 5px groove black ;
 margin-left : 30%;
 margin-top : 2%;
@@ -198,7 +238,7 @@ word-wrap : break-word
 }
 
 #option{
-background-color: #193441;
+background-color: #1D2326;
 font-family:Calibri; 
 width : 700px;
 height : 600px;
@@ -222,13 +262,14 @@ color: #ffffff;
 display: block;
 font: 100% Georgia, "Calibri", Times, serif;
 letter-spacing: 1px;
-margin-left : 175px;
-margin-top: 200px;
+margin-left:auto;
+margin-right:auto;
+margin-top: 100px;
 padding: 7px 25px;
 text-shadow: 0 1px 1px #000000;
 text-transform: uppercase;
 cursor: pointer;
-position:absolute;z-index:3;
+position:relative;z-index:3;
 }
 
 
@@ -248,7 +289,7 @@ margin-left: 5px;
 font-family:Calibri;
 margin-left:10px;
 margin-top: 100px;
-color: #193441;
+color: #1D2326;
 font-size:23pt; 
 position:relative;
 
