--- a/Page_Principal_CSS.css
+++ b/Page_Principal_CSS.css
@@ -1,38 +1,36 @@
 
 html {
   height: 100%;
-
+  width: 100%;
 }
 body{
-background:#91AA9D;
+background:#7a7a6d;
 }
 
 .debut_texte{
 font-weight: bold;
 }
 
-.container {
-width: 100%;
-height: 100%;  
-}
 
 h1{
 margin-top:10px;
 text-align:center;	
-color:#193441;
-	font-size:40px;
+color:#1D2326;
+	font-size:300%;
 }
 
 .titre_souligne{
   text-decoration: underline;
   text-decoration-color: #FCFFF5;
-
 }
+
+
+
 
 h2{
 text-align:center;	
-color:#193441;	
-margin-top:25px;
+color:#1D2326;	
+margin-top:2%;
 font-size:30px;
 }
 
@@ -40,12 +38,12 @@ font-size:30px;
 fieldset {
 border:2px solid ;	
  border-radius:8px;	
-color:#193441;	
+color:#1D2326;	
 margin-top:10px;
 margin-left:20px;
 margin-right:20px;
 padding-left:10px;
-background-color:#D1DBBD;
+background-color:#958976;
 }
 
 legend {
@@ -59,12 +57,12 @@ font-weight:bold;
 
 
 .lien-bouton{
-   color:#193441;
+   color:#1D2326;
    font-family:verdana;
    font-size:18px;
    padding:5px 20px;
    text-decoration:none;
-   border:solid 1px #193441;
+   border:solid 1px #1D2326;
    border-radius:5px;
    margin-top:30px;
 }
@@ -78,18 +76,18 @@ padding-top: 20px;
 border:solid 4px #FCFFF5;
 padding-bottom: 20px;
 text-align:center;
-color:#193441;
+color:#1D2326;
  border-radius:8px;	
  }
  
  #titre {
 font-family:verdana;
-color:#193441;
+color:#1D2326;
 font-size:20px; 	 
  }
 
  footer {
-margin-bottom:50px;
+margin-bottom:2%;
 position:relative; 
 bottom: 0; 
 left: 0; 
@@ -103,9 +101,9 @@ padding-bottom:10px;
 }
 
 #Suivant {
-background: #91AA9D;
+background: #958976;
 border-radius: 10px;
-color: #193441;
+color: #1D2326;
 font: 100% Georgia, "Calibri", Times, serif;
 letter-spacing: 1px;
 margin-top :5px;
