--- a/Ficher_Principal.css
+++ b/Ficher_Principal.css
@@ -10,6 +10,18 @@ margin-right:auto;
 	
 }
 
+
+#choix_id{
+background-color:#FFFFFF;
+padding:2px;
+border:1px solid #F5C5C5;
+border-radius:5px;
+width:250px;
+box-shadow:1px 1px 2px #C0C0C0 inset;
+font: 30px Georgia, "Calibri", Times, serif;
+position:relative;z-index:3;	
+}
+
 .textarea_cryptage{
 max-width:500px;
 max-height:200px;	
@@ -91,7 +103,7 @@ margin-top:50px;
 display:flex;
 margin-left:auto;
 margin-right:auto;
-min-height:100%;
+height: 550px;
 }
 
 #monCanvas{
@@ -113,7 +125,7 @@ float:left;
 border:5px  black;
 flex: 1;
 overflow: auto;
-float:left;
+float:right;
 }
 
 
@@ -124,7 +136,6 @@ font-size:20pt;
 font-family:Calibri;    
 }
 .Suivante {
-width:200px;
 background: #958976;
 border-radius: 10px;
 color: #1D2326;
